# locopdf

./: .gitignore  Makefile.am  configure.ac  configure.in  locopdf.desktop
.tx/: config
data/: Makefile.am  locopdf.ini
debian/: changelog  control  locopdf.install  n516.ini  prs505.ini  rules
help/: Makefile.am  cs.po  en.po  fr.po  locopdf.ini  locopdf.pot  ru.po  sv.po  uk.po
help/locopdf/en/: index.help
po/: POTFILES  bg.po  cs.po  de.po  es.po  fr.po  hu.po  locopdf.desktop.in  locopdf.pot  pl.po  ru.po  sv.po  uk.po  zh_CN.po
src/: Makefile.am  choicebox.c  choicebox.cpp  choicebox.h  choices.c  choices.h  database.c  database.cpp  database.h  dialogs.c  dialogs.h  edjvu_plugin.c  edjvu_plugin.h  entry.c  entry.h  entrybox.c  entrybox.h  epdf_plugin.c  epdf_plugin.h  help.c  help.h  info_export.c  info_export.h  keyhandler.c  keyhandler.cpp  keyhandler.h  locopdf.c  locopdf.cpp  locopdf.h  plugin.h
themes/: Makefile.am  entrybox.edc  entrybox.edj  items.edj  locopdf-items.edc
themes/azbooka/: Makefile.am  locopdf-entrybox.edc  locopdf-items.edc
themes/default/: Makefile.am
